--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ actix-web = "4.11.0"
 async-stream = "0.3.6"
 futures = "0.3.31"
 mime_guess = "2.0.5"
+path-clean = "1.0.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_default = "0.2.0"
 serde_json = "1.0.143"
+tokio = "1.47.1"
