--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ path-clean = "1.0.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_default = "0.2.0"
 serde_json = "1.0.143"
+sha256 = "1.6.0"
 tokio = "1.47.1"
